Update home directory

--- a/templates/covid19-dashboard.Rmd
+++ b/templates/covid19-dashboard.Rmd
@@ -7,7 +7,9 @@ output:
         theme: readthedown
         code_folding: hide
         includes:
-            in_header: meta-tags.html
+            in_header:
+                - meta-tags.html
+                - favicon.html
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 author: 
     - name: Citizens and Technology Lab
@@ -62,7 +64,7 @@ cat.theme <-  theme_bw() +
 options(repr.plot.width=6, repr.plot.height=3)
 
 ## set directories and other global settings
-HOME.DIR = "/home/nathan/covid-algotracker"
+HOME.DIR = file.path(getSrcDirectory(function() {}), "..")
 most.recent.folder.name <- as.character(max(as.numeric(SplitPath(Sys.glob(
         file.path(HOME.DIR, "data-archive", "reddit", "[0-9]*")))$filename)))
 DATA.FOLDER = file.path(HOME.DIR, "data-archive", "reddit", most.recent.folder.name)
