--- a/templates/covid19-dashboard.Rmd
+++ b/templates/covid19-dashboard.Rmd
@@ -173,10 +173,9 @@ latest.top.rank.snapshots <- subset(top.ranks, id %in% latest.top.rank.ids)
 
 **How do Reddit's popularity algorithms promote information about COVID-19?**
 
+
 <!-- CAT Lab Logo (float right) -->
-<!--<img src="../assets/CAT-square-logo.png" width="150" align="right" style="margin:10px;"/>-->
-
-
+<img src="../assets/CAT-square-logo.png" style="width:30%; margin:10px; float:right;"/> 
 Since 2016, the [Citizens and Technology Lab](https://citizensandtech.org/about-cat-lab/) (CAT Lab) has taken ongoing snapshots of reddit's algorithms every 2-3 minutes. We created this dashboard to inform the design of our collaborations with reddit communities on COVID-19 public health research.
 
 During a pandemic, people need evolving information to guide our health decisions and what we share with others. These needs continue across the months-long [pandemic cycle of prevention, resilience, and recovery](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4504362/). 
@@ -186,6 +185,7 @@ Reddit is already a major hub of COVID-19 information for hundreds of millions w
 One reason to monitor algorithms is that information interventions can have unexpected side-effects on ranking algorithms. In a large-scale experiment with r/worldnews on reddit, I found that [encouraging fact-checking influenced what reddit's popularity algorithms promoted by influencing human behavior](https://osf.io/m98b6/).
 
 ## How We Collect Data
+<img src="../assets/algotracker-logo.png" style="margin:10px;width:30%; float:right;">
 This dashboard is generated every 30 minutes using the latest data within CAT Lab's research software. The output of this dashboard is based on the last `r observation.period.days`. It users these sources:
 
 * snapshots every 2 minutes of two key reddit algorithms:
@@ -205,12 +205,9 @@ config.json$terms
 # How Algorithms Promote Reddit Posts Over Time
 Reddit's public rankings are a classic recommender system. Using information from upvotes, downvotes, post age, and maybe other data, reddit's algorithms create a ranked list suggestions to readers. According to Christian Sandvig, feeds like this [outsource human knowledge and attention to machines](https://citizensandtech.org/2020/03/the-feed-sandvig-2020/). Hybrid human-machine curation can be [valuable and difficult during crises](https://dl.acm.org/doi/pdf/10.1145/2998181.2998299), as Alex Leavitt has described in extensive research on reddit.
 
-This dashboard reviews posts that appeared anywhere in the top 100 recommendations for TOP and HOT.
+This dashboard reviews posts that appeared anywhere in the top 100 recommendations for TOP and HOT. On average over the last `r observation.period.days` days, COVID-19 articles that appeared anywhere in the rankings stayed on HOT for `r sprintf("%.01f", mean(subset(recent.posts, (id %in% latest.hot.rank.ids)!=TRUE & front_hot_seconds!=0 & covid_19==1)$front_hot_seconds)/60./60.)` hours and on TOP for `r sprintf("%.01f", mean(subset(recent.posts, (id %in% latest.top.rank.ids)!=TRUE & front_top_seconds!=0 & covid_19==1)$front_top_seconds )/60./60.)` hours.
 
-When articles are promoted by reddit's algorithms, they receive a massive influx of readers, comments, upvotes and downvotes, often causing them to be promoted further. On average over the last `r observation.period.days` days, COVID-19 articles that appeared anywhere in the rankings stayed on HOT for `r sprintf("%.01f", mean(subset(recent.posts, (id %in% latest.hot.rank.ids)!=TRUE & covid_19==1)$front_hot_seconds)/60./60.)
-` hours and on TOP for `r sprintf("%.01f", mean(subset(recent.posts, (id %in% latest.top.rank.ids)!=TRUE & covid_19==1)$front_top_seconds )/60./60.)` hours.
-
-HOT and TOP aren't the only algorithms that influence what people see. For several years now, Reddit has provided a personalized newsfeed algorithm to logged in users, based on the communities that people subscribe to. But since HOT is the default algorithm and many people browse reddit without logging in, these algorithms remain powerful influencers.
+HOT and TOP aren't the only algorithms that influence what people see. For several years now, Reddit has provided a personalized newsfeed algorithm to logged in users, based on the communities that people subscribe to. The company has also developed BEST and POPULAR algorithms, which can add if there's interest.
 
 Here's what that trajectory looks like for one randomly-sampled post that rose and fell from prominence. In the chart, a rank position of 0 means that the article is at the very top. People typically have to scroll down to see more than 3-4 posts. A rank position of -99 means that you would have to scroll past 99 other posts to see that one. Notice that the HOT rankings are more volatile than TOP:
 
@@ -374,23 +371,16 @@ This dashboard summarizes and archives information that is currently public on r
 
 You can read more about CAT Lab's ethics values and processes in our post on [strategies for ethical, accountable online behavior research](https://medium.com/@natematias/3-strategies-for-accountable-ethical-online-behavioral-research-f6ae134458fc).
 
-<!--
-# How to Help
-We have been working with r/science moderators on public health interventions since COVID-19 reached the US. We have lined up collaborations with communities of tens of millions on reddit and are currently fundraising support for a coordinator to help us organize redditors to expand the quality and timeliness of public health information on reddit. We developed this dashboard to guide our own efforts, and also to showcase the information available to our software for community-led behavioral research on reddit.
+# Questions and Bugs
 
-If your community is interested to join us, **TODO: TAKE ACTION**
-
-If you can help us find the resources to hire a part-time coordinator, please contact J. Nathan Matias nathan.matias@cornell.edu. CAT Lab is a proudly [industry-independent](https://citizensandtech.org/2020/01/industry-independent-research/) research lab at Cornell University.
-
--->
+If you find a bug or have a question, please [post it to the issues page](https://github.com/natematias/covid-algotracker/issues) for this project on github. Thanks!
 
 # About CAT Lab
 The [Citizens and Technology Lab](https://citizensandtech.org) at Cornell University with communities to study the social impacts of digital technologies and discover effective ideas for change. CAT Lab is led by [Dr. J. Nathan Matias](https://natematias.com), an assistant professor in the department of Communication. 
 
+Working alongside communities and volunteers, we discover practical knowledge that also contributes to science, holds companies accountable, and is guided by the people most affected. Communities bring their problems, deep knowledge, and desire for change. We bring expertise in scientific research and a software platform for coordinating citizen behavioral science.
 
-Working with communities and movements, we discover practical knowledge that also contributes to science, holds companies accountable, and is guided by the people most affected. Communities bring their problems, deep knowledge, and desire for change. We bring expertise in scientific research and a software platform for coordinating citizen behavioral science.
-
-Over a dozen communities with tens of millions of people have worked with CAT Lab since 2016 on reddit, Wikipedia, and Twitter. We have tested practical ways to prevent harassment, fight misinformation, broaden inclusion, manage civic discourse, and protect freedom of expression. Our discoveries have directly influenced community practice, corporate policies, and government discussions worldwide. These findings are regularly published by the world's top scientific journals in the social sciences and computer science. 
+Over a dozen communities with tens of millions of people have worked with CAT Lab since 2016 on reddit, Wikipedia, and Twitter. We have tested practical ways to prevent harassment, fight misinformation, broaden inclusion, manage civic discourse, and protect freedom of expression. Our discoveries have directly influenced community practice, corporate policies, and government discussions worldwide. These [industry-independent](https://citizensandtech.org/2020/01/industry-independent-research/) findings are regularly published by the world's top scientific journals in the social sciences and computer science. 
 
 # References and Further Reading
 
